feat: add full fuctionality for films, genres, likes and mpa